# steam-achievement-tracker

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json  README.md  build.bat  pch.hpp
ext/: _ext.cmake
ext/lntc_cpp/: .clang-format  CMakeLists.txt  README.md
ext/lntc_cpp/include/: lntc_cpp.hpp
ext/sourcepp/ext/tinyexr/: LICENSE
ext/sourcepp/include/vpkpp/format/: ORE.h
ext/sourcepp/src/vpkpp/: _vpkpp.cmake
include/: achievement.hpp  achievement_manager.hpp  constants.hpp  file_configuration.hpp  notification_widget.hpp  theme_manager.hpp  util.hpp  vdf.hpp
release-scripts/: setup_dependencies.bat
src/: achievement.cpp  achievement_manager.cpp  main.cpp  notification_widget.cpp  util.cpp
third-party-licenses/: spdlog
